# AtmosLens

./: .gitignore  ENGINEERING_SPEC.md  README.md  app.py  pixi.toml  pyproject.toml
data/: README.md  sample_forecast.nc
notebooks/: 01_explore_data.ipynb  02_validate_logic.ipynb  03_lumen_bridge_prototype.ipynb
src/atmoslens/: __init__.py  config.py  datasets.py  exposure.py  lumen_bridge.py  lumen_support.py  models.py  plotting.py  profiles.py  recommendations.py  scoring.py  sql_bridge.py  state.py  views.py  xarray_source.py
tests/: conftest.py  test_comprehensive.py  test_datasets.py  test_exposure.py  test_lumen_bridge.py  test_lumen_support.py  test_profiles.py  test_recommendations.py  test_scoring.py  test_state.py  test_xarray_source.py
