[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "atmoslens"
version = "0.1.0"
description = "Air quality decision copilot built with xarray and the HoloViz ecosystem."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [
  { name = "Agastya Kataria" }
]
dependencies = [
  "bokeh>=3.7,<3.8",
  "cartopy>=0.24,<0.25",
  "colorcet>=3.1,<3.2",
  "geoviews>=1.14,<1.15",
  "holoviews>=1.21,<1.22",
  "hvplot>=0.12,<0.13",
  "netcdf4>=1.7,<2",
  "numpy>=2,<3",
  "pandas>=2.2,<3",
  "panel>=1.8,<1.9",
  "param>=2.2,<2.3",
  "scipy>=1.15,<2",
  "xarray>=2025.1,<2026",
]

[project.optional-dependencies]
dev = [
  "jupyterlab>=4.3,<5",
  "pytest>=8.3,<9",
]

[project.scripts]
atmoslens-fetch = "atmoslens.datasets:main"

[tool.hatch.build.targets.wheel]
packages = ["src/atmoslens"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
